# md-demo

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: changelog.md  design.md  jupyter-conversion.md  markdown-conversion.md
prompts/: design_discussion.md
src/md_demo/: __init__.py  cli.py  config.py  document.py  errors.py  manual.py  runners.py
tests/: test_cli.py  test_document.py
